Add Shepherdson reference

--- a/thesis.bib
+++ b/thesis.bib
@@ -15,17 +15,17 @@
 @ARTICLE{sutner:coords,
   author = {K. Sutner},
   title = {Invertible Transducers, Iterations and Coordinates},
-  journal = {},
+  journal = {TODO},
   year = {2013},
 }
 
 @PhdThesis{okano:thesis,
-  author =       {T. Okano},
-  title =        {Invertible Binary Transducers and Automorphisms of the Binary Tree},
-  school =       {Carnegie Mellon University},
-  year =         2015,
-  month =     {May},
-  annote =    {okano}
+  author = {T. Okano},
+  title =  {Invertible Binary Transducers and Automorphisms of the Binary Tree},
+  school = {Carnegie Mellon University},
+  year =   2015,
+  month =  {May},
+  annote = {okano}
 }
 
 @Book{NekrashevychSidki04:automorphisms,
@@ -136,4 +136,33 @@ archivePrefix = "arXiv",
   ee        = {http://arxiv.org/abs/1012.1531},
   bibsource = {DBLP, http://dblp.uni-trier.de},
   annote =    {invertible}
+}
+
+% TODO not sure if I mixed up the volume and number
+@article{davis:note_utm,
+  author  = {M.~Davis},
+  title   = {A note on universal Turing machines},
+  journal = {Annals of Mathematics studies},
+  year    = 1956,
+  volume  = {34},
+  pages   = {167--175}
+}
+
+@article{davis:defn_utm,
+  author  = {M.~Davis},
+  title   = {The definition of universal Turing machine},
+  journal = {Proceedings of the American Mathematical Society},
+  year    = 1957,
+  volume  = {8},
+  pages   = {1125-1126}
+}
+
+@article{shepherdson:machine_config,
+  author  = {J.~C. Shepherdson},
+  title   = {Machine configuration and word problems of given degree
+             of unsolvability},
+  journal = {Z. f. Math. Logik u. Grundlagen d. Mathematik},
+  year    = 1965,
+  volume  = {11},
+  pages   = {149--175}
 }
