--- a/thesis.sty
+++ b/thesis.sty
@@ -38,3 +38,5 @@
 
 \newcommand{\defn}[1]{\textit{#1}}
 \newcommand{\decprob}[1]{\textsc{#1}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\Q}{\mathbb{Q}}
