Add residuation, parity maps, state-closed definitions.
Also switch automaton font to mathcal

--- a/thesis.sty
+++ b/thesis.sty
@@ -40,3 +40,5 @@
 \newcommand{\decprob}[1]{\textsc{#1}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
+\newcommand{\A}{\mathcal{A}}
+\newcommand{\B}{\mathcal{B}}
