--- a/thesis.bib
+++ b/thesis.bib
@@ -166,3 +166,30 @@ archivePrefix = "arXiv",
   volume  = {11},
   pages   = {149--175}
 }
+
+@book{Sakarovitch:2009:EAT:1629683,
+ author = {Sakarovitch, Jacques},
+ title = {Elements of Automata Theory},
+ year = {2009},
+ isbn = {0521844258, 9780521844253},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+@book{Hopcroft:2000:IAT:557657,
+ author = {Hopcroft, John E. and Motwani, Rajeev and Rotwani and Ullman, Jeffrey D.},
+ title = {Introduction to Automata Theory, Languages and Computability},
+ year = {2000},
+ isbn = {0201441241},
+ edition = {2nd},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
+@book{serre:old,
+ author = {J.-P. Serre.},
+ title = {Arbres, Amalgames, $\mathit{SL}_{2}$},
+ year = {1977},
+ publisher = {Soci\'et\'e Math\'ematique de France},
+ address = {Paris, France},
+} 
