Add complete automaton definition

--- a/thesis.sty
+++ b/thesis.sty
@@ -32,6 +32,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
+\newtheorem{example}{Example}
 \newtheorem{definition}{Definition}
 \newtheorem{question}{Question}
 \newtheorem{conjecture}{Conjecture}
