Move critical definitions into definition enviornments
Start Knapsack proof

--- a/thesis.sty
+++ b/thesis.sty
@@ -40,6 +40,7 @@
 \newcommand{\defn}[1]{\textit{#1}}
 \newcommand{\decprob}[1]{\textsc{#1}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\B}{\mathcal{B}}
