--- a/thesis.bib
+++ b/thesis.bib
@@ -192,4 +192,13 @@ archivePrefix = "arXiv",
  year = {1977},
  publisher = {Soci\'et\'e Math\'ematique de France},
  address = {Paris, France},
+}
+
+@book{Matiyasevich:hilbert,
+ author = {Matiyasevich, Yuri V.},
+ title = {Hilbert's Tenth Problem},
+ year = {1993},
+ isbn = {0-262-13295-8},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
 } 
